<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/add_slider"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/slider"/>
        <item
            android:id="@+id/add_brands"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/add_brands"/>
        <item
            android:id="@+id/add_products"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/add_products"/>
        <item
            android:id="@+id/view_orders"
            android:icon="@drawable/baseline_view_in_ar_24"
            android:title="@string/view_orders"/>

    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>